...
                                                </subviews>
                                                <constraints>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="k7K-Bs-z7V"/>
                                                    <constraint firstAttribute="width" constant="250" id="ph7-QH-c65"/>
                                                </constraints>
                                            </stackView>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="z
                                                <rect key="frame" x="50" y="200" width="314" height="40"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="fqt-fi-2gK"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                <textInputTraits key="textInputTraits" textContentType="username"/>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" clearsOnBeginEditing="YES" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="65L-DJ
                                                <rect key="frame" x="50" y="260" width="314" height="40"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="q3U-80-rXj"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
...
                                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="lVh-xi-4dX"/>
                                                    <constraint firstAttribute="height" constant="40" id="orL-KV-i2K"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="NotoSans-Bold" family="Noto Sans" pointSize="15"/>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" systemColor="systemBackgroundColor"/>
                                                </state>
                                                <connections>
                                                    <action selector="loginButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Z58-t9-YcS"/>
                                                </connections>
                                            </button>
...
                                    <outlet property="delegate" destination="Zr4-Fk-lYG" id="39q-lV-gVz"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="V1b-xn-r3S"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="catalogViewController">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="rKn-VY-ao4" firstAttribute="top" secondItem="V1b-xn-r3S" secondAttribute="top" id="A2p-4y-iY8"/>
                            <constraint firstItem="V1b-xn-r3S" firstAttribute="trailing" secondItem="rKn-VY-ao4" secondAttribute="trailing" id="Bux-Pc-gjk"/>
                            <constraint firstItem="V1b-xn-r3S" firstAttribute="bottom" secondItem="rKn-VY-ao4" secondAttribute="bottom" id="h1o-Wz-Wfp"/>
...
